# fireworks-engine

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
assets/: keymap.csv
assets/lang/: en.csv
src/: CMakeLists.txt
src/IO/: CMakeLists.txt  IO.cpp  IO.hpp  IOHandler.hpp  IOSettings.hpp  Keyboard.hpp
src/IO/OGL/: OGLAPI.cpp  OGLAPI.hpp  OGLData.hpp  OGLRender.cpp  OGLRender.hpp  OGLWindow.cpp  OGLWindow.hpp
src/dedicatedserver/: CMakeLists.txt  server.cpp
src/main/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt
src/shared/: CMakeLists.txt  logger.cpp  logger.hpp  paths.cpp  paths.hpp  translation.cpp  translation.hpp
src/shared/GameData/: Planet.hpp
